FIX more broken links that resulted from switching to antora

--- a/docs/en-gb/modules/data/pages/elasticSync-incoming-items.adoc
+++ b/docs/en-gb/modules/data/pages/elasticSync-incoming-items.adoc
@@ -67,7 +67,7 @@ Enter the stock into your CSV file.
 
 *_Permitted import values_*: Numeric
 
-You can find the result of the import in the back end menu xref:stock-management:managing-stocks.adoc#100[Stock » Stocks » [open variation] » tab: Stock » tab: Stock].
+You can find the result of the import in the back end menu xref:stock-management:managing-stocks.adoc#100[Stock » Stocks » [Open variation\] » tab: Stock » tab: Stock].
 
 '''
 
@@ -136,7 +136,7 @@ Enter the currency into your CSV file.
 
 *_Permitted import values_*: Alphanumeric (internal ID)
 
-You can find the result of the import in the back end menu xref:payment:currencies.adoc#10[Stock » Stocks » [open variation] » tab: Stock » tab: Incoming items].
+You can find the result of the import in the back end menu xref:payment:currencies.adoc#10[Stock » Stocks » [Open variation\] » tab: Stock » tab: Incoming items].
 
 '''
 
