--- a/docs/en-gb/modules/data/pages/elasticSync-warehouse.adoc
+++ b/docs/en-gb/modules/data/pages/elasticSync-warehouse.adoc
@@ -206,7 +206,7 @@ Enter the storage location type according to the size of the variation into your
 |Euro pallet
 |====
 
-You can find the result of the import in the back end menu: xref:stock-management:new-incoming-items.adoc#intable-storage-location-type[Item » Edit item » [open item] » Tab: ID of a variation » Tab: Warehouse » column: Storage location type].
+You can find the result of the import in the back end menu: xref:stock-management:new-incoming-items.adoc#intable-storage-location-type[Item » Edit item » [Open item\] » Tab: ID of a variation » Tab: Warehouse » column: Storage location type].
 
 '''
 
