--- a/docs/en-gb/modules/data/pages/item.adoc
+++ b/docs/en-gb/modules/data/pages/item.adoc
@@ -76,7 +76,7 @@ image::data:asin-all.png[]
 |
 include::item:partial$asin.adoc[]
 
-Corresponds to the option in the menu: xref:item:managing-items.adoc#260[Item » Edit item » [Open variation] » Tab: Settings » Area: ASIN/ePID/MOIN]
+Corresponds to the option in the menu: xref:item:managing-items.adoc#260[Item » Edit item » [Open variation\] » Tab: Settings » Area: ASIN/ePID/MOIN]
 
 |====
 
@@ -92,7 +92,7 @@ Corresponds to the option in the menu: xref:item:managing-items.adoc#260[Item »
 |
 include::item:partial$moin.adoc[]
 
-Corresponds to the option in the menu: xref:item:managing-items.adoc#260[Item » Edit item » [Open variation] » Tab: Settings » Area: ASIN/ePID/MOIN]
+Corresponds to the option in the menu: xref:item:managing-items.adoc#260[Item » Edit item » [Open variation\] » Tab: Settings » Area: ASIN/ePID/MOIN]
 
 |====
 
@@ -104,7 +104,7 @@ Corresponds to the option in the menu: xref:item:managing-items.adoc#260[Item »
 This folder lists the xref:item:barcodes.adoc#100[barcode types] that you’ve already configured in the menu *Setup » Item » Barcode*.
 When you add a barcode type to the catalogue, xref:item:barcodes.adoc#300[the actual code] that was saved for this barcode type in the variation data record will be exported.
 
-Corresponds to the option in the menu: xref:item:managing-items.adoc#250[Item » Edit item » [Open variation] » Tab: Settings » Area: Barcode]
+Corresponds to the option in the menu: xref:item:managing-items.adoc#250[Item » Edit item » [Open variation\] » Tab: Settings » Area: Barcode]
 
 [discrete]
 ===== Example: Catalogue data field and variation data field
@@ -159,7 +159,7 @@ include::item:partial$name.adoc[]
 | *Category description*
 |The text and HTML formatting saved in the tab *Description 1*.
 
-Corresponds to the option in the menu: xref:item:categories.adoc#800[Item » Category » [Open category] » Tab: Description 1]
+Corresponds to the option in the menu: xref:item:categories.adoc#800[Item » Category » [Open category\] » Tab: Description 1]
 
 | *URL name*
 |
@@ -348,7 +348,7 @@ You can find the internal attribute value names in the menu *Setup » Item » At
 | *SKU*
 |Select the order referrer from the drop-down list.
 Enter the account if needed.
-Corresponds to the option in the menu: xref:item:managing-items.adoc#370[Item » Edit item » [Open variation] » Tab: Availability » Area: SKU]
+Corresponds to the option in the menu: xref:item:managing-items.adoc#370[Item » Edit item » [Open variation\] » Tab: Availability » Area: SKU]
 
 *_Note_*: Not every marketplace has an account.
 In this case, leave the field blank.
@@ -356,7 +356,7 @@ In this case, leave the field blank.
 | *Parent SKU*
 |Select the order referrer from the drop-down list.
 Enter the account if needed.
-Corresponds to the option in the menu: xref:item:managing-items.adoc#370[Item » Edit item » [Open variation] » Tab: Availability » Area: SKU]
+Corresponds to the option in the menu: xref:item:managing-items.adoc#370[Item » Edit item » [Open variation\] » Tab: Availability » Area: SKU]
 
 *_Note_*: Not every marketplace has an account.
 In this case, leave the field blank.
@@ -395,14 +395,14 @@ Example:
 | *Physical stock*
 |The quantity of items that are actually in the warehouse.
 
-Corresponds to the option in the menu: xref:item:managing-items.adoc#95[Item » Edit item » [Open item] » Tab: Stock » Column: Phy]
+Corresponds to the option in the menu: xref:item:managing-items.adoc#95[Item » Edit item » [Open item\] » Tab: Stock » Column: Phy]
 
 | *Net stock*
 |The quantity of items that are available for sale.
 The net stock is a subset of the physical stock.
 Substract all reserved quantities from the physical stock and you will get the net stock.
 
-Corresponds to the option in the menu: xref:item:managing-items.adoc#95[Item » Edit item » [Open item] » Tab: Stock » Column: Net]
+Corresponds to the option in the menu: xref:item:managing-items.adoc#95[Item » Edit item » [Open item\] » Tab: Stock » Column: Net]
 
 | *Reserved stock*
 |The quantity of items that are reserved.
@@ -410,7 +410,7 @@ A variation will be reserved as soon as an order or a warranty is created.
 The stock is reserved until either outgoing items are booked or until the order or the warranty is cancelled.
 The reserved stock is part of the physical stock because the reserved stock is still present in the warehouse.
 
-Corresponds to the option in the menu: xref:item:managing-items.adoc#95[Item » Edit item » [Open item] » Tab: Stock » Column: RS]
+Corresponds to the option in the menu: xref:item:managing-items.adoc#95[Item » Edit item » [Open item\] » Tab: Stock » Column: RS]
 
 | *Reorder level Delta*
 |The difference to the reorder level.
@@ -418,7 +418,7 @@ The difference either tells you how many items still need to be sold in order to
 This means if the difference is negative your stock is still above the reorder level.
 If the difference is positive, your stock is below the reorder level.
 
-Corresponds to the option in the menu: <<item/managing-items#95, Item » Edit item » [Open item] » Tab: Stock » Column: RLΔ>>
+Corresponds to the option in the menu: <<item/managing-items#95, Item » Edit item » [Open item\] » Tab: Stock » Column: RLΔ>>
 
 |====
 
@@ -770,7 +770,7 @@ Export the data with the tools xref:data:item-images.adoc#[FormatDesigner] and x
 This specifies which image should be exported.
 If you do not enter a number, then the image with the lowest position number will be exported.
 
-Corresponds to the option in the menu: xref:item:managing-items.adoc#90[Item » Edit item » [Open item] » Tab: Images » Option: Position]
+Corresponds to the option in the menu: xref:item:managing-items.adoc#90[Item » Edit item » [Open item\] » Tab: Images » Option: Position]
 
 |====
 
@@ -803,7 +803,7 @@ Make sure that the “Export Keys” have unique names.
 This folder lists the xref:item:prices.adoc#[sales prices] that you’ve already configured in the menu *Setup » Item » Sales prices*.
 When you add a sales price to the catalogue, xref:item:managing-items.adoc#240[the actual monetary price], which is saved in the variation data record, will be exported.
 
-Corresponds to the option in the menu: xref:item:managing-items.adoc#240[Item » Edit item » [Open variation] » Tab: Settings » Area: Sales prices]
+Corresponds to the option in the menu: xref:item:managing-items.adoc#240[Item » Edit item » [Open variation\] » Tab: Settings » Area: Sales prices]
 
 [discrete]
 ===== Example: Catalogue data field and variation data field
