ADJUST link to dhl site

--- a/docs/en-gb/modules/fulfilment/pages/plugin-dhl-shipping-versenden.adoc
+++ b/docs/en-gb/modules/fulfilment/pages/plugin-dhl-shipping-versenden.adoc
@@ -14,7 +14,7 @@ As an alternative, you can download the plugin from link:https://marketplace.ple
 [#register-with-dhl]
 == Registering with DHL
 
-In order to set up the interface for DHL Shipping (Versenden) in your plentymarkets system and use the function _Versenden_ (shipping) in the DHL business customer portal, you have to be registered with link:https://www.dhl.de/en/geschaeftskunden/paket/kunde-werden/angebot-dhl-geschaeftskunden-online.html[DHL^]. You receive the data from DHL that you need for the settings in plentymarkets.
+In order to set up the interface for DHL Shipping (Versenden) in your plentymarkets system and use the function _Versenden_ (shipping) in the DHL business customer portal, you have to be registered with link:http://www.dhl.de/dhl-kundewerden?source=plentymarkets&cid=c_dhloka_de_plentymarkets[DHL^]. You receive the data from DHL that you need for the settings in plentymarkets.
 
 [#set-up-dhl-shipping-versenden]
 == Setting up DHL Shipping (Versenden) in plentymarkets
