FIX obvious issues in the en video pages, like broken links, missing files, etc

--- a/docs/en-gb/modules/videos/pages/accounting-invoicing.adoc
+++ b/docs/en-gb/modules/videos/pages/accounting-invoicing.adoc
@@ -3,12 +3,8 @@
 :id: IESY96C
 :author: team-order-core, team-docs-automation
 
-xref:videos:locations.adoc#[Locations - An introduction]
-
-xref:videos:locations-accounting.adoc#[Locations - Accounting]
-
-xref:videos:invoice.adoc#[Set up your invoice]
-
-xref:videos:sepa-direct-debit-mandate.adoc#[SEPA direct debit mandate]
-
-xref:videos:numbers.adoc#[Managing numbers]
+* xref:videos:locations.adoc#[Locations - An introduction]
+* xref:videos:locations-accounting.adoc#[Locations - Accounting]
+* xref:videos:invoice.adoc#[Set up your invoice]
+* xref:videos:sepa-direct-debit-mandate.adoc#[SEPA direct debit mandate]
+* xref:videos:numbers.adoc#[Managing numbers]
