--- a/docs/en-gb/modules/videos/pages/case-examples.adoc
+++ b/docs/en-gb/modules/videos/pages/case-examples.adoc
@@ -1,9 +1,6 @@
-= Case examples
+= Practical examples
 :page-index: false
 :author: team-plenty-channel
 
-xref:videos:import-export.adoc#[Importing and exporting syncs]
-
-xref:videos:creating-items-with-variations.adoc#[Creating items with variations]
-
-xref:videos:importing-order-information.adoc#[Importing order information]
+* xref:videos:creating-items-with-variations.adoc#[Importing items and variations]
+* xref:videos:importing-order-information.adoc#[Importing orders]
