--- a/docs/en-gb/modules/videos/pages/ebay.adoc
+++ b/docs/en-gb/modules/videos/pages/ebay.adoc
@@ -7,38 +7,27 @@ eBay – a piece of cake! Learn how all the settings link together to form one b
 
 == Introduction
 
-xref:videos:ebay-introduction.adoc#[eBay in three easy steps]
+* xref:videos:ebay-introduction.adoc#[eBay in three easy steps]
 
 == Configuring the settings
 
-xref:videos:ebay-account.adoc#[Linking your eBay account to plentymarkets]
-
-xref:videos:business-policies.adoc#[Saving eBay business policies]
+* xref:videos:ebay-account.adoc#[Linking your eBay account to plentymarkets]
+* xref:videos:business-policies.adoc#[Saving eBay business policies]
 
 == Working with listings
 
-xref:videos:listing-import.adoc#[Importing item and listing data from your eBay account]
-
-xref:videos:create-listings.adoc#[Manually creating eBay listings]
-
-xref:videos:edit-listings.adoc#[Manually editing eBay listings]
-
-xref:videos:start-listings.adoc#[Starting, re-starting and ending listings]
-
-xref:videos:modify-listings.adoc#[Modifying several listings at once]
-
-xref:videos:layout-templates.adoc#[Use layout templates to individualise your eBay listings]
-
-xref:videos:ebay-returns.adoc#[Processing and automating eBay returns]
+* xref:videos:listing-import.adoc#[Importing item and listing data from your eBay account]
+* xref:videos:create-listings.adoc#[Manually creating eBay listings]
+* xref:videos:edit-listings.adoc#[Manually editing eBay listings]
+* xref:videos:start-listings.adoc#[Starting, re-starting and ending listings]
+* xref:videos:modify-listings.adoc#[Modifying several listings at once]
+* xref:videos:layout-templates.adoc#[Use layout templates to individualise your eBay listings]
+* xref:videos:ebay-returns.adoc#[Processing and automating eBay returns]
 
 == eBay plugins
 
-xref:videos:sales-activity.adoc#[Analysing your eBay sales activity]
-
-xref:videos:sales-promotions.adoc#[Create sales promotions for eBay using the eBay Marketing plugin]
-
-xref:videos:promoted-listings.adoc#[Creating eBay promoted listings with the eBay Marketing plugin]
-
-xref:videos:ebay-seo.adoc#[Improving your ranking with the eBay SEO plugin]
-
-xref:videos:ebay-feedback.adoc#[Import and reply to eBay feedback in your system]
+* xref:videos:sales-activity.adoc#[Analysing your eBay sales activity]
+* xref:videos:sales-promotions.adoc#[Create sales promotions for eBay using the eBay Marketing plugin]
+* xref:videos:promoted-listings.adoc#[Creating eBay promoted listings with the eBay Marketing plugin]
+* xref:videos:ebay-seo.adoc#[Improving your ranking with the eBay SEO plugin]
+* xref:videos:ebay-feedback.adoc#[Import and reply to eBay feedback in your system]
