--- a/docs/en-gb/modules/videos/pages/event-procedures.adoc
+++ b/docs/en-gb/modules/videos/pages/event-procedures.adoc
@@ -3,10 +3,7 @@
 :id: AVRPLVZ
 :author: team-docs-automation
 
-xref:videos:introduction.adoc#[Introduction to event procedures]
-
-xref:videos:fulfill-orders.adoc#[Using event procedures to automatically fulfill orders]
-
-xref:videos:tracking-url.adoc#[Event procedure for sending tracking URLs]
-
-xref:videos:free-gift.adoc#[Event procedure for adding free gifts]
+* xref:videos:event-procedures-introduction.adoc#[Introduction to event procedures]
+* xref:videos:fulfill-orders.adoc#[Using event procedures to automatically fulfill orders]
+* xref:videos:tracking-url.adoc#[Event procedure for sending tracking URLs]
+* xref:videos:free-gift.adoc#[Event procedure for adding free gifts]
