--- a/docs/en-gb/modules/videos/pages/extra-features.adoc
+++ b/docs/en-gb/modules/videos/pages/extra-features.adoc
@@ -2,8 +2,7 @@
 :page-index: false
 :author: team-plenty-channel
 
-xref:videos:extra-information-sync.adoc#[Adding extra information to your sync]
-
-xref:videos:trading-information.adoc#[Trading one piece of information for another]
-
-xref:videos:modifying-information.adoc#[Modifying the information in your sync]
+* xref:videos:extra-information-sync.adoc#[Own value: Adding information]
+* xref:videos:trading-information.adoc#[Own assignment: Exchanging information]
+* xref:videos:modifying-information.adoc#[Regular expression: Modifying information]
+* xref:videos:case-examples-import-export.adoc#[Importing and exporting templates]
