--- a/docs/en-gb/modules/videos/pages/items.adoc
+++ b/docs/en-gb/modules/videos/pages/items.adoc
@@ -5,24 +5,21 @@
 
 See just how easy it is to save items in plentymarkets and get your online business started! Learn about the many options for structuring items.
 
-[discrete]
-==== Introducing the item structure
+== Introducing the item structure
 
 * xref:videos:structure.adoc#[Item structure and import options]
 * xref:videos:inheritance.adoc#[Inheritance]
 
-[discrete]
-==== Preparatory settings
+== Preparatory settings
 
 * xref:videos:attributes.adoc#[Attributes]
 * xref:videos:sales-prices.adoc#[Sales prices]
 * xref:videos:create-categories.adoc#[Categories]
 
-[discrete]
-==== Import, export and manual processing
+== Import, export and manual processing
 
 * xref:videos:mandatory-settings.adoc#[Mandatory settings and important item data]
 * xref:videos:create-item.adoc#[Manually creating an item]
 * xref:videos:main-variation.adoc#[Item - Tab: Main variation]
 * xref:videos:global.adoc#[Item - Tab: Global]
-* xref:videos:creating-items-with-variations.adoc#[Practical example: Creating items and variations]
+* xref:videos:creating-items-with-variations.adoc#[Practical example: Importing items and variations]
