--- a/docs/en-gb/modules/videos/pages/online-store.adoc
+++ b/docs/en-gb/modules/videos/pages/online-store.adoc
@@ -1,10 +1,10 @@
-= Online store
+= plentyShop
 :page-index: false
 :id: YNGCGAV
 :author: team-webshop
 
 Start building the online store of your dreams! This video course introduces you to Ceres - a modern store template, which unites state-of-the-art logic with attractive designs.
 
-xref:videos:first-step.adoc#[Take the first step toward opening your online store]
-
-xref:videos:customise-your-online-store.adoc#[Customising the look of your Ceres online store]
+* xref:videos:first-step.adoc#[Take the first step toward opening your plentyShop!]
+* xref:videos:customise-your-online-store.adoc#[Customising the look of your plentyShop]
+* xref:videos:featuring-specific-items.adoc#[Featuring specific items on your homepage and other pages]
