--- a/docs/en-gb/modules/videos/pages/order-processing.adoc
+++ b/docs/en-gb/modules/videos/pages/order-processing.adoc
@@ -7,46 +7,33 @@ Join our factory tour and see how sellers can process orders in plentymarkets st
 
 == Introduction
 
-xref:videos:introduction-order-processing-step-by-step.adoc#[Order processing step-by-step]
+* xref:videos:introduction-order-processing-step-by-step.adoc#[Order processing step-by-step]
 
 == Configuring the settings
 
-xref:videos:order-statuses.adoc#[Using statuses to keep track of orders]
-
-<<videos/order-processing/configuring settings/order-settings#, Taking a glance at your order settings>>
+* xref:videos:order-statuses.adoc#[Using statuses to keep track of orders]
+* xref:videos:order-settings#[Taking a glance at your order settings]
 
 == Processing orders
 
-xref:videos:fulfill-orders-with-processes.adoc#[Getting started fulfilling orders]
-
-<<videos/order-processing/processing-orders/reversal-document#, How do you deal with locked orders? Create a reversal document!>>
-
-xref:videos:quicklinks-order-overview.adoc#[Quicklinks in your order overview]
-
-xref:videos:fulfilling-orders.adoc#[Fulfill your orders with a plentymarkets process]
-
-xref:videos:partial-deliveries.adoc#[Creating and managing partial deliveries]
+* xref:videos:fulfill-orders-with-processes.adoc#[Getting started fulfilling orders]
+* xref:videos:reversal-document#[How do you deal with locked orders? Create a reversal document!]
+* xref:videos:quicklinks-order-overview.adoc#[Quicklinks in your order overview]
+* xref:videos:fulfilling-orders.adoc#[Fulfill your orders with a plentymarkets process]
+* xref:videos:partial-deliveries.adoc#[Creating and managing partial deliveries]
 
 == Shipping
 
-xref:videos:options.adoc#[Configuring shipping profiles]
-
-xref:videos:profiles.adoc#[Creating and editing shipping profiles]
-
-xref:videos:tables-shipping-charges.adoc#[Using tables of shipping charges]
-
-xref:videos:example-dpd.adoc#[Putting it all together with an example: DPD UK]
+* xref:videos:options.adoc#[Configuring shipping profiles]
+* xref:videos:profiles.adoc#[Creating and editing shipping profiles]
+* xref:videos:tables-shipping-charges.adoc#[Using tables of shipping charges]
+* xref:videos:example-dpd.adoc#[Putting it all together with an example: DPD UK]
 
 == Returns and cancellations
 
-<<videos/order-processing/returns-and-cancellations/return-or-cancellation#, Return or cancellation? The path to great customer service>>
-
-xref:videos:cancelling-orders.adoc#[Cancelling orders]
-
-xref:videos:return-settings.adoc#[Customising your return settings]
-
-xref:videos:manual-returns.adoc#[Manually creating returns]
-
-xref:videos:automatic-returns.adoc#[Automating returns]
-
-xref:videos:compensating-customers.adoc#[Compensating customers]
+* xref:videos:return-or-cancellation#[Return or cancellation? The path to great customer service]
+* xref:videos:cancelling-orders.adoc#[Cancelling orders]
+* xref:videos:return-settings.adoc#[Customising your return settings]
+* xref:videos:manual-returns.adoc#[Manually creating returns]
+* xref:videos:automatic-returns.adoc#[Automating returns]
+* xref:videos:compensating-customers.adoc#[Compensating customers]
