--- a/docs/en-gb/modules/videos/pages/pos.adoc
+++ b/docs/en-gb/modules/videos/pages/pos.adoc
@@ -7,24 +7,18 @@ It only takes a few minutes to set up a point of sale system in plentymarkets an
 
 == Introduction
 
-xref:videos:introduction.adoc#[Introduction]
+* xref:videos:pos-introduction.adoc#[Introduction]
 
 == Setting up plentyPOS
 
-xref:videos:backend.adoc#[Setting up your point of sale system]
-
-xref:videos:app.adoc#[Installing the plentymarkets app and linking it to your plentyPOS system]
-
-xref:videos:card-terminals.adoc#[Linking credit and debit card terminals to your plentyPOS system]
-
-<<videos/pos/setting-up-pos/miscellaneous#, Selling miscellaneous items that aren't in your system>>
+* xref:videos:backend.adoc#[Setting up your point of sale system]
+* xref:videos:app.adoc#[Installing the plentymarkets app and linking it to your POS system]
+* xref:videos:card-terminals.adoc#[Linking credit and debit card terminals to your plentyPOS system]
+* xref:videos:miscellaneous.adoc#[Selling miscellaneous items that aren't in your system]
 
 == Working with the app
 
-xref:videos:ringing-up-customers.adoc#[Ringing up customers with the plentymarkets app]
-
-xref:videos:deposits-withdrawals.adoc#[Booking cash deposits and withdrawals]
-
-xref:videos:cash-on-hand.adoc#[Documenting your cash on hand]
-
-xref:videos:z-report.adoc#[Creating z reports]
+* xref:videos:ringing-up-customers.adoc#[Ringing up customers with the plentymarkets app]
+* xref:videos:deposits-withdrawals.adoc#[Booking cash deposits and withdrawals]
+* xref:videos:cash-on-hand.adoc#[Documenting your cash on hand]
+* xref:videos:z-report.adoc#[Creating Z reports]
