--- a/docs/en-gb/modules/videos/pages/setting-up-pos.adoc
+++ b/docs/en-gb/modules/videos/pages/setting-up-pos.adoc
@@ -3,10 +3,7 @@
 :id: V647AFP
 :author: team-mobile
 
-xref:videos:backend.adoc#[Setting up your point of sale system]
-
-xref:videos:app.adoc#[Installing the plentymarkets app and linking it to your POS system]
-
-xref:videos:card-terminals.adoc#[Linking credit and debit card terminals to your POS system]
-
-<<videos/pos/setting-up-pos/miscellaneous#, Selling miscellaneous items that aren't in your system>>
+* xref:videos:backend.adoc#[Setting up your point of sale system]
+* xref:videos:app.adoc#[Installing the plentymarkets app and linking it to your POS system]
+* xref:videos:card-terminals.adoc#[Linking credit and debit card terminals to your plentyPOS system]
+* xref:videos:miscellaneous.adoc#[Selling miscellaneous items that aren't in your system]
