--- a/docs/en-gb/modules/videos/pages/settings.adoc
+++ b/docs/en-gb/modules/videos/pages/settings.adoc
@@ -3,6 +3,5 @@
 :id: BD31JEM
 :author: team-plenty-channel
 
-xref:videos:ebay-account.adoc#[Linking your eBay account to plentymarkets]
-
-xref:videos:business-policies.adoc#[Saving eBay business policies]
+* xref:videos:ebay-account.adoc#[Linking your eBay account to plentymarkets]
+* xref:videos:business-policies.adoc#[Saving eBay business policies]
