--- a/docs/en-gb/modules/videos/pages/stock-management.adoc
+++ b/docs/en-gb/modules/videos/pages/stock-management.adoc
@@ -5,4 +5,4 @@
 
 Stock management is a universe all of its own. And yet you can easily replicate your warehouses in your plentymarkets system. Learn how in this module!
 
-xref:videos:setting-up-and-managing-storage-locations.adoc#[Setting up and managing storage locations]
+* xref:videos:setting-up-and-managing-storage-locations.adoc#[Setting up and managing storage locations]
