--- a/docs/en-gb/modules/videos/pages/trading-information.adoc
+++ b/docs/en-gb/modules/videos/pages/trading-information.adoc
@@ -1,4 +1,4 @@
-= Trading one piece of information for another
+= Own assignment: Exchanging information
 :page-index: false
 :id: K4S3OWS
 :author: team-plenty-channel
@@ -6,8 +6,13 @@
 //tag::einleitung[]
 [cols="2, 1" grid=none]
 |===
-|You want to import a file into plentymarkets, but it lists information differently than plentymarkets does? No need to modify the file by hand! You can use ElasticSync's "Own Assignment" function to swap out one piece of information for another. +
-*_Note:_* The term *ElasticSync* is outdated and has been replaced by *import*.
+|You want to import a file into plentymarkets, but it lists information differently than plentymarkets does?
+No need to modify the file by hand!
+You can use the "Own Assignment" function to swap out one piece of information for another.
+
+*_Note_*: When this video was produced, the import tool was called ElasticSync.
+This name is now outdated and the menu has gone through a few visual changes.
+However, the general content of the video still remains valid.
 |
 |===
 //end::einleitung[]
