--- a/docs/en-gb/modules/videos/pages/videos.adoc
+++ b/docs/en-gb/modules/videos/pages/videos.adoc
@@ -20,7 +20,7 @@ xref:videos:personalisation.adoc#[*Personalisation (12 videos)*] +
 Make plentymarkets yours! Save your company information, create user accounts for staff members, and link your e-mail account with plentymarkets.
 
 a|image::videos:item.png[]
-xref:videos:items.adoc#[*Items (9 videos)*] +
+xref:videos:items.adoc#[*Items (10 videos)*] +
 See just how easy it is to save items in plentymarkets and get your online business started! Learn about the many options for structuring items.
 
 a|image::videos:order.png[]
@@ -28,7 +28,7 @@ xref:videos:order-processing.adoc#[*Order processing (18 videos)*] +
 Join our factory tour and see how sellers can process orders in plentymarkets step-by-step.
 
 a|image::videos:webshop.png[]
-xref:videos:online-store.adoc#[*Online store (3 videos)*] +
+xref:videos:online-store.adoc#[*plentyShop (3 videos)*] +
 Start building the online store of your dreams! This video course introduces you to Ceres - a modern store template, which unites state-of-the-art logic with attractive designs.
 
 a|image::videos:ebay.png[]
@@ -44,7 +44,7 @@ xref:videos:automation.adoc#[*Automation (18 videos)*] +
 Automate your routine tasks! plentymarkets gives you the power to knock out day-to-day tasks at the speed of light.
 
 a|image::videos:elasticsync.jpg[]
-xref:videos:data-transfer.adoc#[*Data transfer (10 videos)*] +
+xref:videos:data-transfer.adoc#[*Data transfer (9 videos)*] +
 Whether you want to import new items into your system or keep existing information up to date – plentymarkets provides you with the proper tools!
 
 a|image::videos:pos.jpg[]
@@ -54,4 +54,7 @@ It only takes a few minutes to set up a point of sale system in plentymarkets an
 a|image::videos:stock.png[]
 xref:videos:stock-management.adoc#[*Stock management (1 video)*] +
 Stock management is a universe all of its own. And yet you can easily replicate your warehouses in your plentymarkets system. Learn how in this module!
+
+a|
+
 |====
