--- a/docs/en-gb/modules/videos/pages/automation.adoc
+++ b/docs/en-gb/modules/videos/pages/automation.adoc
@@ -7,42 +7,27 @@ Automate your routine tasks! plentymarkets gives you the power to knock out day-
 
 == Introduction
 
-xref:videos:introduction.adoc#[Introduction]
+* xref:videos:automation-introduction.adoc#[Introduction]
 
 == Event procedures
 
-xref:videos:introduction.adoc#[Introduction to event procedures]
-
-xref:videos:fulfill-orders.adoc#[Using event procedures to automatically fulfill orders]
-
-xref:videos:tracking-url.adoc#[Event procedure for sending tracking URLs]
-
-xref:videos:free-gift.adoc#[Event procedure for adding free gifts]
+* xref:videos:event-procedures-introduction.adoc#[Introduction to event procedures]
+* xref:videos:fulfill-orders.adoc#[Using event procedures to automatically fulfill orders]
+* xref:videos:tracking-url.adoc#[Event procedure for sending tracking URLs]
+* xref:videos:free-gift.adoc#[Event procedure for adding free gifts]
 
 == Processes
 
-xref:videos:plentybase.adoc#[Installing plentyBase]
-
-xref:videos:printer.adoc#[Linking your printer to plentymarkets]
-
-xref:videos:creating-starting.adoc#[Creating and starting processes]
-
-<<videos/automation/processes/work-steps#, What are work steps?>>
-
-<<videos/automation/processes/procedures#, What are procedures and sub-procedures?>>
-
-xref:videos:import-export.adoc#[Importing and exporting processes]
-
-xref:videos:control-elements.adoc#[Introduction to control elements in processes]
-
-xref:videos:loop.adoc#[Loop - The cyclical control element]
-
-xref:videos:split.adoc#[Split - Sending processes down two different paths]
-
-xref:videos:filter.adoc#[Filter - Sift through input in a process]
-
-xref:videos:dialogue.adoc#[Dialog - Letting employees decide how a process continues]
-
-xref:videos:example-multi.adoc#[Example process - Multi-order picking]
-
-xref:videos:example-single.adoc#[Example process - Single order picking]
+* xref:videos:plentybase.adoc#[Installing plentyBase]
+* xref:videos:printer.adoc#[Linking your printer to plentymarkets]
+* xref:videos:creating-starting.adoc#[Creating and starting processes]
+* xref:videos:work-steps.adoc#[What are work steps?]
+* xref:videos:procedures.adoc#[What are procedures and sub-procedures?]
+* xref:videos:processes-import-export.adoc#[Importing and exporting processes]
+* xref:videos:control-elements.adoc#[Introduction to control elements in processes]
+* xref:videos:loop.adoc#[Loop - The cyclical control element]
+* xref:videos:split.adoc#[Split - Sending processes down two different paths]
+* xref:videos:filter.adoc#[Filter - Sift through input in a process]
+* xref:videos:dialogue.adoc#[Dialogue - Letting employees decide how a process continues]
+* xref:videos:example-multi.adoc#[Example process - Multi-order picking]
+* xref:videos:example-single.adoc#[Example process - Single order picking]
