--- a/docs/en-gb/modules/videos/pages/basics.adoc
+++ b/docs/en-gb/modules/videos/pages/basics.adoc
@@ -5,10 +5,7 @@
 
 Are you new to plentymarkets? This introductory video course takes you on a quick tour of your system.
 
-<<videos/basics/welcome-to-plentymarkets#, Welcome to plentymarkets!>>
-
-xref:videos:omni-channel-sales-command-centre.adoc#[Omni-channel sales from one central command centre]
-
-xref:videos:item-structure-import-options.adoc#[Item structure and import options]
-
-xref:videos:fulfil-orders-ship-packages.adoc#[Let plentymarkets help you fulfil orders and ship packages]
+* xref:videos:welcome-to-plentymarkets#[Welcome to plentymarkets]
+* xref:videos:omni-channel-sales-command-centre.adoc#[Omni-channel sales from one central command centre]
+* xref:videos:item-structure-import-options.adoc#[Item structure and import options]
+* xref:videos:fulfil-orders-ship-packages.adoc#[Let plentymarkets help you fulfil orders and ship packages]
