--- a/docs/en-gb/modules/videos/pages/data-transfer-basics.adoc
+++ b/docs/en-gb/modules/videos/pages/data-transfer-basics.adoc
@@ -2,8 +2,6 @@
 :page-index: false
 :author: team-plenty-channel
 
-xref:videos:importing-data-with-elasticsync.adoc#[Using ElasticSync to import data]
-
-xref:videos:manually-importing-files.adoc#[Manually importing a file one time]
-
-xref:videos:automatically-importing-files.adoc#[Automatically importing files]
+* xref:videos:importing-data-with-elasticsync.adoc#[First steps with the import tool]
+* xref:videos:manually-importing-files.adoc#[One-time import (manual)]
+* xref:videos:automatically-importing-files.adoc#[Recurring import (automatic)]
