Prepare eol page contact ui

--- a/docs/en-gb/modules/business-decisions/pages/eol.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/eol.adoc
@@ -16,6 +16,12 @@ This overview does not replace the xref:changelog:changelog.adoc#[changelog] or 
 |====
 |Area/function |End of software maintenance |End of provisioningfootnote:[Date from which the function is no longer available] |Further information |Announcement date
 
+| *CRM » Contacts (deprecated)* menu
+|28-Apr-2022
+|starting on 28-April-2022 (successive removal)
+|link:[Forum link^]
+|28-Apr-2022 
+
 | *plentymarkets logo (Start) » Boards* menu
 |13-Apr-2022
 |starting on 13-April-2022 (successive removal)
