Added error message

--- a/docs/de-de/modules/maerkte/pages/best-practices-amazon-prime.adoc
+++ b/docs/de-de/modules/maerkte/pages/best-practices-amazon-prime.adoc
@@ -120,3 +120,4 @@ Die letzte Möglichkeit wäre, dass keine *Maße* übermittelt werden. Das kann 
 - *Error:ShippingServiceNotAvailable, Type: Sender* bedeutet, wie die Fehlermeldung bereits sagt, dass ein Amazon-Service für den Auftrag übermittelt wurde, welcher nicht zur Art (zum Beispiel NextDay) des Auftrags passt. Amazon sieht für die unterschiedlichen Arten unterschiedliche Services vor. Daher kommt der Fehler. Prüfen, ob das passende Versandprofil am Auftrag gespeichert ist und/oder der passende AmazonService in dem Versandprofil eingegeben wurde.
 - *Error:ResourceNotFound, Type: Sender* bedeutet, dass der Auftrag auf Amazon nicht existiert oder er bereits storniert wurde.
 - *No Valid Warehouse Address* bedeutet, dass für das Lager, aus dem versendet wird, keine oder keine gültigen Werte eingetragen sind (*Einstellungen » Aufträge » Versand » Versanddienstleister » Grundeinstellungen*).
+- *Error:InvalidShipFromAddress* bedeutet, dass im Menü *Einrichtung » Aufträge » Versand » Dienstleister » Einstellungen » [Lager aufklappen]* nicht alle notwendigen Daten für das Lager gespeichert wurden. Welche Daten für ein Lager hinterlegt sein müssen, ist <<#180, hier>> beschrieben.
