--- a/docs/en-gb/modules/markets/pages/best-practices-amazon-prime.adoc
+++ b/docs/en-gb/modules/markets/pages/best-practices-amazon-prime.adoc
@@ -107,3 +107,4 @@ Another cause might be that the *dimensions* are not transferred to Amazon becau
 - *Error:ShippingServiceNotAvailable, Type: Sender* indicates that an Amazon service was saved for the order that does not match the order type (e.g. NextDay). Different services should be used for the different order types on Amazon. Check whether the correct shipping profile was saved for the order and whether the correct Amazon service was saved in the shipping profile.
 - *Error:ResourceNotFound, Type: Sender* indicates that the order does not exist on Amazon or that the order was cancelled.
 - *No Valid Warehouse Address* indicates that no values or no valid values were saved for the selected warehouse. Enter the values in the *Setup » Orders » Shipping » Shipping service provider » Settings* menu.
+- *Error:InvalidShipFromAddress* means that not all data which is required for the warehouse was saved in the *Setup » Orders » Shipping » Shipping service provider » Settings » [Expand warehouse]* menu. Which data has to be saved for a warehouse is described <<#180, here>>.
