--- a/docs/de-de/modules/automatisierung/pages/ereignisaktionen.adoc
+++ b/docs/de-de/modules/automatisierung/pages/ereignisaktionen.adoc
@@ -261,8 +261,12 @@ Einige Filter erfordern weitere Einstellungen. Wähle nach dem Hinzufügen diese
 icon:map-signs[] *_Oder:_* Alternativ kannst du ein oder mehrere deiner Lager wählen, um nur Aufträge des einen und/oder des anderen gewählten Lagers zu berücksichtigen. +
 
 | *Anzahl Positionen*
-|Aufträge werden anhand der Anzahl der Auftragspositionen gefiltert, die pro Auftrag enthalten sind. Wähle, ob das System nach Aufträgen mit der exakt angegebenen Anzahl (==) der Positionen oder nach Werten größer (>), größer gleich (>=), kleiner (<), kleiner gleich (<=) der gewählten Anzahl filtert. Optional kannst du die Filterergebnisse über einen zweiten optionalen Operator eingrenzen. +
-*_Beispiel:_* Filterung nach allen Aufträgen mit mehr als 5 aber weniger oder gleich 10 Positionen: > 5 < = 10.
+|Aufträge werden anhand der Anzahl der verschiedenen Auftragspositionen gefiltert, die pro Auftrag enthalten sind. Wähle, ob das System nach Aufträgen mit der exakt angegebenen Anzahl (==) der Positionen oder nach Werten größer (>), größer gleich (>=), kleiner (<), kleiner gleich (<=) der gewählten Anzahl filtert. Optional kannst du die Filterergebnisse über einen zweiten Operator eingrenzen. +
+*_Beispiel:_* Filterung nach allen Aufträgen mit mehr als 5 aber weniger oder gleich 10 verschiedenen Positionen: > 5 < = 10.
+
+| *Menge der Auftragspositionen*
+|Aufträge werden Anhand der Gesamtmenge aller Auftragspositionen gefiltert, die pro Auftrag enthalten ist. Wähle, ob das System nach Aufträgen mit der exakt angegebenen Menge (==) der Positionen oder nach Werten größer (>), größer gleich (>=), kleiner (<), kleiner gleich (<=) der gewählten Menge filtert. Optional kannst du die Filterergebnisse über einen zweiten Operator eingrenzen. +
+*_Beispiel:_* Filterung nach allen Aufträgen mit mehr als 5 aber weniger oder gleich 10 Auftragspositionen: > 5 < = 10.
 
 | *Aktiver Benutzer*
 |Aufträge werden anhand der aktiven xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#[Benutzer:in] gefiltert, d.h. der Person, die den durch die Ereignisaktion aktivierten Vorgang auslöst. Es sind mehrere oder auch *alle* Benutzer:innen auf einmal wählbar.
