Prepare contact pages old and new

--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -87,7 +87,7 @@
 *** xref:warenwirtschaft:etiketten-drucken.adoc[Etiketten drucken]
 * xref:crm:crm.adoc[CRM]
 ** xref:crm:schnellsuche.adoc[Schnellsuche]
-** xref:crm:kontakte.adoc[Kontakte (Testphase)]
+** xref:crm:kontakte.adoc[Kontakte]
 *** xref:crm:vorbereitende-einstellungen.adoc[Vorbereitende Einstellungen vornehmen]
 *** xref:crm:kontakt-suchen.adoc[Kontakt suchen]
 *** xref:crm:kontakt-erstellen.adoc[Kontakt erstellen]
@@ -99,7 +99,7 @@
 ** xref:crm:op-liste.adoc[Offene Posten]
 ** xref:crm:ticketsystem-nutzen.adoc[Ticketsystem]
 ** xref:crm:newsletter-versenden.adoc[Newsletter]
-** xref:crm:kontakte-verwalten.adoc[Kontakte]
+** xref:crm:kontakte-verwalten.adoc[Kontakte (altes Tool)]
 * xref:auftraege:auftraege.adoc[Aufträge]
 ** xref:auftraege:grundeinstellungen.adoc[Grundeinstellungen]
 ** xref:auftraege:auftraege-verwalten.adoc[Aufträge verwalten]
