--- a/docs/de-de/modules/crm/pages/kontakt-erstellen.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-erstellen.adoc
@@ -78,7 +78,7 @@ Die folgende Handlungsanweisung beschreibt die Standardansicht mit den 3 Kompone
 [.instruction]
 Kontakt erstellen: 
 
-. Öffne das Menü *CRM » Kontakte (Testphase)*.
+. Öffne das Menü *CRM » Kontakte*.
 . Klicke auf icon:plus[] *Neuer Kontakt*. +
 → Die Standardansicht wird angezeigt. Die Standardansicht besteht aus 3 Bereichen: Firma, Adressdetails, Kontaktdetails.
 . Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in Tabelle <<#table-create-contact>> und die Informationen zu den bereits <<#vorausgewaehlte-felder-neuer-kontakt, vorausgewählten Feldern>>.
