--- a/docs/en-gb/modules/crm/pages/create-contact.adoc
+++ b/docs/en-gb/modules/crm/pages/create-contact.adoc
@@ -78,7 +78,7 @@ The following instruction describes the default view with the 3 components *Comp
 [.instruction]
 Creating a contact: 
 
-. Go to *CRM » Contacts (Test phase)*.
+. Go to *CRM » Contacts*.
 . Click on icon:plus[] *New contact*. +
 → The default view appears. The default view consists of 3 areas: Company, address details and contact details.
 . Carry out the settings. Note <<#table-create-contact>> and the information about the <<#preselected-fields-new-contact, fields that are already preselected>>.
