--- a/docs/en-gb/modules/crm/pages/search-contact.adoc
+++ b/docs/en-gb/modules/crm/pages/search-contact.adoc
@@ -12,9 +12,9 @@ xref:crm:create-contact.adoc#[Creating a contact icon:long-arrow-right[]]
 In order to search for specific contacts, enter a search term in the search fields. You can enter multiple search terms into the search fields at one time. This makes your search run quicker and be more accurate.
 
 [.instruction]
-Searching for a contact: 
+Searching for a contact:
 
-. Go to *CRM » Contacts (Test phase)*.
+. Go to *CRM » Contacts*.
 * *_Alternative 1:_* Click on *Search* (icon:search[set=material]) to get a list of all companies.
 * *_Alternative 2:_* Enter a value in the search field and select the appropriate filter from the suggestion list. *_Example:_* If you enter a number, the possible filters with this ID will be suggested to you such as for example the contact ID.
 * *_Alternative 3:_* Click on icon:tune[set=material] to narrow down the search results with filters.
@@ -122,7 +122,7 @@ Applying saved filters:
 [#default-filter]
 == Setting a default filter
 
-To make sure that you don’t have to select a filter that you use quite often from the list of your <<#apply-saved-filters, saved filters>> every time when opening the *CRM » Contacts (Test phase)* menu, you can set a created filter as default filter. Every time when you open the contacts UI, this filter will be automatically applied.
+To make sure that you don’t have to select a filter that you use quite often from the list of your <<#apply-saved-filters, saved filters>> every time when opening the *CRM » Contacts* menu, you can set a created filter as default filter. Every time when you open the contacts UI, this filter will be automatically applied.
 
 You can set the filter as default filter directly when creating it as described in <<#save-current-filter, Saving the current filter>> or you can set the filter as default in the overview afterwards.
 
