--- a/docs/de-de/modules/crm/pages/kontakt-suchen.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-suchen.adoc
@@ -14,7 +14,7 @@ Um einen bestimmten Kontakt zu suchen, gibst du die dir bekannten Suchbegriffe i
 [.instruction]
 Kontakt suchen: 
 
-. Öffne das Menü *CRM » Kontakte (Testphase)*.
+. Öffne das Menü *CRM » Kontakte*.
 * *_Möglichkeit 1:_* Klicke auf icon:search[set=material] (*Suchen*), um eine Liste aller Kontakte zu sehen. 
 * *_Möglichkeit 2:_* Gib einen Wert im Suchfeld ein und wähle dann den für dich passenden Filter aus der Vorschlagsliste. *_Beispiel:_* Wenn du eine Zahl eingibst, werden dir mögliche Filter mit dieser ID vorgeschlagen wie z.B. die Kontakt-ID.
 * *_Möglichkeit 3:_* Klicke auf icon:tune[set=material], um die Suchergebnisse mit Hilfe von Filtern einzugrenzen.
@@ -122,7 +122,7 @@ Gespeicherte Filter anwenden:
 [#filter-als-standard]
 == Filter als Standard festlegen
 
-Damit du einen häufig verwendeten Filter nicht jedes Mal beim Öffnen des Menüs *CRM » Kontakte (Testphase)* erst aus der Liste deiner <<#gespeicherte-filter-anwenden, gespeicherten Filter>> wählen musst, kannst du einen erstellten Filter als Standard festlegen. Jedes Mal, wenn du die Kontakte-UI öffnest, wird dieser Filter dann also automatisch ausgeführt.
+Damit du einen häufig verwendeten Filter nicht jedes Mal beim Öffnen des Menüs *CRM » Kontakte* erst aus der Liste deiner <<#gespeicherte-filter-anwenden, gespeicherten Filter>> wählen musst, kannst du einen erstellten Filter als Standard festlegen. Jedes Mal, wenn du die Kontakte-UI öffnest, wird dieser Filter dann also automatisch ausgeführt.
 
 Du kannst einen Filter direkt beim Erstellen als Standard festlegen wie im Kapitel <<#aktuellen-filter-speichern, Aktuellen Filter speichern>> beschrieben oder du legst den Filter nachträglich aus der Übersicht heraus als Standard fest.
 
