--- a/docs/de-de/modules/crm/pages/kontakte-verwalten.adoc
+++ b/docs/de-de/modules/crm/pages/kontakte-verwalten.adoc
@@ -1,8 +1,14 @@
-= Kontakte
+= Kontakte (altes Tool)
 :keywords: Kontakt, Kunde, Adresse, primäre Lieferadresse, primäre Rechnungsadresse, Firmen, Firma, Ustidnummer, Ust ID Nummer, Handelsvertreter, Gastzugang, Gastbestellung, eingeloggter Kunde, registrierter Kunde, regulärer Zugang, Passwort ändern, Passwortänderung, Kunde kann sich nicht einloggen, Login entsperren, Bankdaten, Kundenklasse, Kontaktklasse, Kundendaten löschen, Datensatz löschen, Kunde löschen, Kontakt löschen, Adresslayout, Kundentyp, Rabattsystem, Rabatte vergeben, Rabatte für Kundenklasse, Kontaktoption, Adressoption, Provision, Kostenstelle, Kontakte importieren, Kundendaten importieren, Kundendaten exportieren
 :description: Erfahre, wie du in plentymarkets Kontakte, Adressen und Firmen verwaltest.
 :id: KO9RPU2
 :author: team-crm
+
+[IMPORTANT]
+.Wichtig: Dieses Menü wird nicht mehr weiterentwickelt
+====
+Das Menü *CRM » Kontakte (veraltet)* wird nicht mehr weiterentwickelt. Du kannst das Menü weiterhin sehen und nutzen. Erweiterungen und Neuerungen werden aber nicht mehr vorgenommen. Wir empfehlen dir, das neue Menü *CRM » Kontakte* zu nutzen. Weitere Informationen findest du auf der Handbuchseite xref:crm:kontakte.adoc#[Kontakte] und in diesem link:XXX[Forumsbeitrag^].
+====
 
 Auf dieser Handbuchseite sind alle Einstellungen, die im Menü *CRM » Kontakte* zur Verfügung stehen, sowie die Einstellungen, die du im Menü *Einrichtung » CRM* vornehmen musst, beschrieben.
 
