--- a/docs/de-de/modules/crm/pages/kontakte.adoc
+++ b/docs/de-de/modules/crm/pages/kontakte.adoc
@@ -1,15 +1,12 @@
-= Kontakte (Testphase)
-:keywords: Kontakte Testphase, neue Kontakt-UI, neue Kontakte-UI, neue UI für Kontakte, neue Benutzeroberfläche Kontakte
+= Kontakte
+:keywords: Kontakte, neue Kontakt-UI, neue Kontakte-UI, neue UI für Kontakte, neue Benutzeroberfläche Kontakte
 :id: BR5VM0N
+:page-aliases: kontakte-testphase.adoc
 :author: team-crm
 
-//// 
-Die neue Bedienoberfläche *CRM » Kontakte (Testphase)* wurde im Januar 2022 in einer geschlossenen Betaphase veröffentlicht. Geschlossene Betaphase bedeutet, dass die neue Bedienoberfläche zum Erstellen und Verwalten von Kontakten zunächst von einer kleinen Personengruppe getestet wird. Sobald diese Bedienoberfläche weiter ausgereift ist und mögliche Fehler behoben wurden, wird die offene Betaphase beginnen.
-////
+In diesem Themenbereich findest du alle Informationen rund um die neue Bedienoberfläche im Menü *CRM » Kontakte*. Im Menü *Einrichtung » CRM* u.a. nimmst du xref:crm:vorbereitende-einstellungen.adoc#[vorbereitende Einstellungen] wie das Erstellen von Kundenklassen und Typen vor. Im Menü *CRM » Kontakte* xref:crm:kontakt-erstellen.adoc#[erstellst] und xref:crm:kontakt-bearbeiten.adoc#[bearbeitest] du die Datensätze deiner Kontakte und verwaltest dort alle Informationen wie z.B. Adressen, Aufträge, Tickets, Umsätze, Bankdaten und Dokumente.
 
-In diesem Themenbereich findest du alle Informationen rund um die neue Bedienoberfläche im Menü *CRM » Kontakte (Testphase)*. Im Menü *Einrichtung » CRM* u.a. nimmst du xref:crm:vorbereitende-einstellungen.adoc#[vorbereitende Einstellungen] wie das Erstellen von Kundenklassen und Typen vor. Im Menü *CRM » Kontakte (Testphase)* xref:crm:kontakt-erstellen.adoc#[erstellst] und xref:crm:kontakt-bearbeiten.adoc#[bearbeitest] du die Datensätze deiner Kontakte und verwaltest dort alle Informationen wie z.B. Adressen, Aufträge, Tickets, Umsätze, Bankdaten und Dokumente.
-
-Das Menü *CRM » Kontakte (Testphase)* ist wie folgt aufgebaut:
+Das Menü *CRM » Kontakte* ist wie folgt aufgebaut:
 
 image::crm:kontakte-uebersicht.png[width=640, height=360]
 
