Added additional info about refunds

--- a/docs/de-de/modules/maerkte/pages/amazon-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/amazon-einrichten.adoc
@@ -307,7 +307,7 @@ Auftragsstatus für Retoure einstellen:
 
 ==== Retouren automatisch an Amazon melden
 
-Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um Retouren in Form von Gutschriften automatisch an Amazon zu senden.
+Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um Retouren in Form von Gutschriften automatisch an Amazon zu senden. Wenn die Ereignisaktion *Retoure bei Amazon anlegen* in plentymarkets ausgelöst wird, wird die bei Amazon erzeugte Gutschrift erstattet.
 
 :table-event-procedure: <<#ereignisaktion-automatische-retoure>>
 
