--- a/docs/en-gb/modules/markets/pages/amazon-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/amazon-setup.adoc
@@ -304,7 +304,7 @@ Setting an order status for returns:
 
 ==== Sending returns to Amazon automatically
 
-Set up an xref:automation:event-procedures.adoc#[event procedure] to automatically send returns in form of credit notes to Amazon.
+Set up an xref:automation:event-procedures.adoc#[event procedure] to automatically send returns in form of credit notes to Amazon. As soon as the event procedure *Create a return at Amazon* is triggered in plentymarkets, the credit note created at Amazon is repayed.
 
 :table-event-procedure: <<#event-procedure-automatic-return>>
 
